--- a/libs/configuration_app/templates/app.html
+++ b/libs/configuration_app/templates/app.html
@@ -2,12 +2,11 @@
 
 {% block body %}
   <div id="mainContent">
-    <h1>WiFi Setup</h1>
     <div class="wifiIcon"></div>
 
     <form action="{{ url_for('save_credentials') }}" method=post>
       <ul>
-        <li><label for="ssid">WiFi name</label></li>
+        <li><label for="ssid">Connect your bot to WiFi</label></li>
 
         <li class="wifiNetwork">
           <select id="ssid" name="ssid", class="wifiNetworkInputs">
@@ -16,25 +15,22 @@
             {% endfor %}
           </select>
         </li>
-
-        <li><a href="{{ url_for('manual_ssid_entry') }}" class="manualSSIDEntry">manual SSID entry -></a></li>
-
-        <li><label for="wifi_key">WiFi password</label></li>
-        <li><input type="password" name="wifi_key", class="wifiNetworkInputs" placeholder="Password"></li>
-
+        
+        <li><input type="password" name="wifi_key", class="wifiNetworkInputs" placeholder="WiFi password" value="Connect"></li>
         <input type="submit", class="wifiConnectButton">
+
       </ul>
     </form>
     <div id="wpaStatus">
       <ul>
+        <li><a href="{{ url_for('manual_ssid_entry') }}" class="manualSSIDEntry">Enter your SSID manually instead</a></li>
         {% if config_hash['wpa_enabled'] == '1': %}
           <li><a href="{{ url_for('wpa_settings') }}">Config. Mode WPA: ENABLED</a></li>
           <li><a href="{{ url_for('wpa_settings') }}">Key: {{ config_hash['wpa_key'] }}</a></li>
         {% endif %}
-
         {% if config_hash['wpa_enabled'] == '0': %}
           <li><a href="{{ url_for('wpa_settings') }}">Config. Mode WPA: DISABLED</a></li>
-      {% endif %}
+        {% endif %}
       </ul>
     </div>
   </div>
