--- a/libs/configuration_app/static/stylesheets/app.css
+++ b/libs/configuration_app/static/stylesheets/app.css
@@ -119,9 +119,12 @@ select.wifiNetworkInputs {
     margin:2em 0;
     padding:.5em;
     background-color: #eb4647;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 0;
     color: #fff;
-    border:none;
+    border: 1px solid #bbb;
     border-radius: 1rem;
 }
 
