--- a/libs/configuration_app/static/stylesheets/app.css
+++ b/libs/configuration_app/static/stylesheets/app.css
@@ -45,13 +45,14 @@ div#wpaStatus{
     padding: 4px;
     margin: 0 0 10px 0;
     width: 250px;
-    background-color: #928043;
+    background-color: #246EBA;
     text-align: left;
     font-size: .3em;
 }
 
 div#wpaStatus a{
     color: #fff;
+    text-decoration: none;
 }
 
 label[for=ssid],
@@ -120,11 +121,10 @@ select.wifiNetworkInputs {
     padding:.5em;
     background-color: #eb4647;
     font-size: 1.6rem;
-    font-weight: 900;
     text-align: center;
     letter-spacing: 0;
     color: #fff;
-    border: 1px solid #bbb;
+    border: none;
     border-radius: 1rem;
 }
 
