--- a/libs/configuration_app/templates/app.html
+++ b/libs/configuration_app/templates/app.html
@@ -16,8 +16,8 @@
           </select>
         </li>
         
-        <li><input type="password" name="wifi_key", class="wifiNetworkInputs" placeholder="WiFi password" value="Connect"></li>
-        <input type="submit", class="wifiConnectButton">
+        <li><input type="password" name="wifi_key", class="wifiNetworkInputs" placeholder="WiFi password"></li>
+        <input type="submit", class="wifiConnectButton" value="Connect">
 
       </ul>
     </form>
