--- a/libs/configuration_app/static/stylesheets/app.css
+++ b/libs/configuration_app/static/stylesheets/app.css
@@ -126,6 +126,8 @@ select.wifiNetworkInputs {
     color: #fff;
     border: none;
     border-radius: 1rem;
+    -moz-appearance: none;
+    -webkit-appearance: none;
 }
 
 .manualSSIDEntry{
